tests/whiley/valid/test_920.wyal
type nat is (int x)
where:
    x >= 0


assert "type invariant not satisfied":
    forall(int[] xs):
        if:
            true
        then:
            |xs| is nat


