tests/whiley/invalid/test_157.wyal
type nat is (int n)
where:
    n >= 0


type natlist is (nat[] self)


type nlt is (nat|natlist self)


assert "type invariant not satisfied":
    forall(int y):
        if:
            true
        then:
            y is nlt


